# push

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_NOTES.md  SECURITY.md  config.example.json  config.toml.example  go.mod  install.sh  mkdocs.yml
.factory/: AGENTS.md  JOURNAL.md  STANDARDS.md
.factory/WORKFLOWS/: standards-check.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml  security.yml
assistant/: Memory.example.md  SOUL.example.md  User.example.md
cmd/push/: main.go
docs/: architecture.md  configuration.md  contributing.md  designing-an-assistant.md  getting-started.md  index.md  jobs.md  missive.md  prd.md  security.md  services.md  skills.md  slack.md  strategy.md  telegram.md
docs/channels/: imessage.md
docs/core-system/: design.md
docs/jobs/: design.md
docs/reference/: cli.md
docs/stylesheets/: extra.css
examples/assistant/: README.md  SOUL.md
examples/assistant/context/: README.md  inbox-triage.md
examples/assistant/jobs/: daily-inbox-triage.md
examples/launchd/: com.owainlewis.push.plist
examples/systemd/: push.service
internal/claude/: claude.go
internal/config/: config.go
internal/gateway/: gateway.go  gateway_test.go
internal/imessage/: attributedbody.go  attributedbody_test.go  poller.go  sender.go
internal/memory/: memory.go
internal/store/: store.go
scripts/: check-release-version.sh
site/: index.html
src/: agent.rs  aider.rs  approval.rs  assistant.rs  audit.rs  channel.rs  claude.rs  codex.rs  config.rs  doctor.rs  drafts.rs  gateway.rs  history.rs  jobs.rs  main.rs  markdown.rs  memory.rs  missive.rs  pi.rs  rehydration.rs  restart.rs  simplex.rs  slack.rs  soul.rs  store.rs  telegram.rs  test_support.rs  util.rs  voice.rs
src/gateway/: mod.rs  tests.rs  worker.rs
src/imessage/: attributed_body.rs  mod.rs  poller.rs  sender.rs
tests/: docs.rs  init_cli.rs  install.sh  manual_job_crash.rs  release-version.sh
