[package]
name = "push"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "A tiny messaging gateway that turns coding agents into a personal assistant you text."
repository = "https://github.com/owainlewis/push"

[[bin]]
name = "push"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "sync", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
toml_edit = "0.23"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
humantime = "2"
sha2 = "0.10"
chrono-tz = "0.10"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
strip = true
lto = true
